--- a/Pdf_hackmania.ipynb
+++ b/Pdf_hackmania.ipynb
@@ -871,7 +871,7 @@
         "def split_text_into_chunks(text, max_chunk_size):\n",
         "    return textwrap.wrap(text, max_chunk_size)\n",
         "\n",
-        "openai.api_key = \"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\"\n",
+        "openai.api_key = \"\"\n",
         "max_chunk_size = 4000\n",
         "transcript_chunks = split_text_into_chunks(text, max_chunk_size)\n",
         "qa_pairs = []\n",
