--- a/Telegram_bot.ipynb
+++ b/Telegram_bot.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNR5pENoV7J2yoJ93q/f4Nt",
+      "authorship_tag": "ABX9TyMa45WuXenbBvEX6ad9WF5x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -785,7 +785,7 @@
       "cell_type": "code",
       "source": [
         "import os\n",
-        "os.environ[\"OPENAI_API_KEY\"] = \"\""
+        "os.environ[\"OPENAI_API_KEY\"] = \"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\""
       ],
       "metadata": {
         "id": "gSLBt8FdQq9Z"
@@ -869,7 +869,7 @@
         "os.environ[\"OPENAI_API_KEY\"] = \"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\"\n",
         "\n",
         "# Initialize the Telegram bot with your bot token\n",
-        "bot = telebot.TeleBot(\"6416297581:AAGHkj2hL9Ov-ygp0uH0RMdLKmbemxNVIis\")\n",
+        "bot = telebot.TeleBot(\"\")\n",
         "\n",
         "# Create a Langchain chat agent\n",
         "litte_ds = create_pandas_dataframe_agent(OpenAI(temperature=0), df2, verbose=True)\n",
